fix margin spilling to the bottom

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
 	/* Travel distance of background animation 
 	   Should be based on height of chosen image */
-	--bg-height: 1024px;
+	--bg-height: 640px;
 	--bg-height-cookies: 620px;
 	/* Colors for easy modification and reference */
 	--bg-color-dark: rgba(0, 14, 29, 1);
@@ -109,6 +109,8 @@ cookieButton {
 	flex-wrap: wrap;
 	flex-direction: row;
 	margin: 32px;
+	margin-bottom: 0;
+	padding-bottom: 12px;
 	justify-content: space-evenly;
 	/*text-shadow: 0px 0px 2px yellow;*/
 }
